application/flask-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: hacktoberfestflask
spec:
  type: ClusterIP
  ports:
  - name: "my-app"
    port: 5000
  selector:
    app: my-app
