application/flask-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  annotations:
    kubernetes.io/ingress.class: hacktoberfest-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: hacktoberfestflask
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: my-app
                port:
                  number: 5000
            path: /flaskapp
            pathType: Prefix
